# Discord-Message-Bot

./: .gitignore  CMakeLists.txt  Info.plist.in  PunkinBot  README.md  README.txt  icon.icns  install.sh
data/: adjectives.txt  cache.txt  gifs.txt  nouns.txt  templates.txt  verbs.txt
include/: dataType.h  messageCreator.h
src/: dataType.cpp  main.cpp  messageCreator.cpp
